<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.CSCI.a3130_group_6.Listings.EditEmployerListing">


    <Button
        android:id="@+id/backEmployeeHome"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="96dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewStatus" />

    <TextView
        android:id="@+id/TaskDescription"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="322dp"
        android:text="Task Description"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTitle" />

    <TextView
        android:id="@+id/viewUrgency"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="322dp"
        android:text="Urgency (1-5)"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TaskDescription" />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="322dp"
        android:text="Date (DD/MM/YY)"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewUrgency" />

    <TextView
        android:id="@+id/viewPay"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="322dp"
        android:text="Pay"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewDate" />

    <TextView
        android:id="@+id/viewTitle"
        android:layout_width="116dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="322dp"
        android:text="Task Title"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/viewDate"
        app:layout_constraintTop_toBottomOf="@+id/urgencyInput" />

    <Button
        android:id="@+id/submitTask"
        android:layout_width="151dp"
        android:layout_height="54dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="96dp"
        android:text="Submit Task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backEmployeeHome"
        app:layout_constraintTop_toBottomOf="@+id/statusInput" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/viewTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/TaskDescription"
        app:layout_constraintTop_toBottomOf="@id/titleInput" />

    <EditText
        android:id="@+id/urgencyInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/viewUrgency"
        app:layout_constraintTop_toBottomOf="@id/descriptionInput" />

    <EditText
        android:id="@+id/payInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/viewPay"
        app:layout_constraintTop_toBottomOf="@id/dateInput" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="51dp"
        android:textColor="#F40606"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitTask"
        app:layout_constraintVertical_bias="0.627" />


    <TextView
        android:id="@+id/viewStatus"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="322dp"
        android:text="Status: OPEN/CLOSED"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPay" />

    <EditText
        android:id="@+id/statusInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="131dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/backEmployeeHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewStatus"
        app:layout_constraintTop_toBottomOf="@+id/payInput" />

    <TextView
        android:id="@+id/viewDescription"
        android:layout_width="116dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="322dp"
        android:text="Task Description"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>