<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/employee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationForEmployers"> --><![CDATA[
    android:id="@+id/registrationEmployer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationForEmployers">















    ]]>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home2" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="Username"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <Button
        android:id="@+id/uploadResume"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"

        android:layout_marginBottom="25dp"
        android:text="Upload Resume"
        app:layout_constraintBottom_toTopOf="@+id/Submit1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/seeResume"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="24dp"
        android:text="select Resume"
        app:layout_constraintBottom_toTopOf="@+id/Submit1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/VPassword"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="Verify Password"
        app:layout_constraintBottom_toTopOf="@+id/Phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/currentLocationView"
        android:layout_width="161dp"
        android:layout_height="54dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/imageToUpload"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Image"
        android:layout_width="366dp"
        android:layout_height="38dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="28dp"
        android:text="Capture Image"
        app:layout_constraintBottom_toTopOf="@+id/uploadResume"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="33dp"
        android:text="Add Location"
        app:layout_constraintBottom_toTopOf="@+id/payPalId"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputRadius"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        android:hint="Value b/w 1 and 25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="20dp"
        android:text="Phone"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="66dp"
        android:layout_height="31dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="20dp"
        android:text="Radius of Work"
        app:layout_constraintBottom_toTopOf="@+id/addLocationButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="8dp"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/radius"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="277dp"
        android:text="Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Submit1"
        android:layout_width="149dp"
        android:layout_height="46dp"
        android:layout_marginStart="121dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="16dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="49dp"
        android:text="Employer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="152dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <EditText
        android:id="@+id/name"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Employer" />

    <EditText
        android:id="@+id/password"
        android:layout_width="152dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="33dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vpassword"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/vpassword"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/imageToUpload"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="16dp"
        android:text="Add Image"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Image"
        app:layout_constraintStart_toEndOf="@+id/payPalId" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/VPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/Employer"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/home2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/employeeUserError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputRadius" />

    <EditText
        android:id="@+id/payPalId"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="Enter PayPal Client ID"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentLocationView" />


</androidx.constraintlayout.widget.ConstraintLayout>

